--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -206,22 +206,55 @@ input[type=submit] {
 
 
 
-@media screen and (min-width: 0px) and (max-width: 980px) {
+@media screen (max-width: 980px) {
+  .container {
+    width: 90%;
+  }
+  .sidebar {
+    width: 90%;
+  }
+  img {
+    width: 100%;
+    height: 50%;
+    margin-left: -20px;
+  }
+  .main-section {
+    width: 100%;
   }
 
 }
 
 @media screen and (min-width: 0px) and (max-width: 768px) {
-  header,
-  nav,
-  nav li,
-  #logo,
-  #masterhead {
-    float: none;
-    text-align: center;
+  .container {
+    width: 90%;
+  }
+  .sidebar {
+    width: 90%;
+  }
+  img {
     width: 100%;
+    height: 50%;
+    margin-left: -20px;
+  }
+  .main-section {
+    width: 100%;
+  }
 
 }
 
 @@media screen and (min-width: 0px) and (max-width: 640px) {
+  .container {
+    width: 90%;
+  }
+  .sidebar {
+    width: 90%;
+  }
+  img {
+    width: 100%;
+    height: 50%;
+    margin-left: -20px;
+  }
+  .main-section {
+    width: 100%;
+  }
 }
